Le damos estilo a el menu

--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Daniel Gutierrez</title>
 
     <!-- box icons -->
-
-
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
     <!-- custom css  -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Portfolio</a>
 
-        <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <i class="bx bx-menu" id="menu-icon"></i>
+
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
 
-
-
+    <!-- Home section design  -->
+<section class="home" id="home">
+    <div class="home-content">
+        <h3>Hello, It's Me</h3>
+        <h1>Daniel Gutierrez</h1>
+        <h3>And I'm a <span>Frontend Developer</span></h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta molestiae similique iste amet perspiciatis cumque labore ullam fugiat, repudiandae doloribus. Qui sunt quo aperiam provident nesciunt libero totam modi incidunt.</p>
+    <div class="social-media">
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+    </div>
+    </div>
+</section>
     <!-- Javascript -->
     <script src="js/script.js"></script>
-</body>
+  </body>
 </html>
