--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
         <h3>And I'm a <span>Frontend Developer</span></h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta molestiae similique iste amet perspiciatis cumque labore ullam fugiat, repudiandae doloribus. Qui sunt quo aperiam provident nesciunt libero totam modi incidunt.</p>
     <div class="social-media">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+        <a href="#"><i class='bx bxl-github'></i></a>
+        <a href="#"><i class='bx bxl-facebook'></i></a>
     </div>
+    <a href="#" class="btn">Download CV</a>
+    </div>
+    <div class="home-img">
+        <img src="images/Home.png" alt="">
     </div>
 </section>
     <!-- Javascript -->
