Avance en about

--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
         <img src="images/Home.png" alt="">
     </div>
 </section>
+
+<!-- About section design  -->
+<section class="about" id="about">
+          <div class="about-img">
+            <img src="images/Home.png" alt="">
+          </div>
+
+          <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Backend Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam temporibus rem delectus rerum facere dolorum sed. Aspernatur, minima! Tempora adipisci eligendi consequatur quam amet deserunt similique quidem quaerat sint.</p>
+            <a href="#" class="btn">Read More</a>
+          </div>
+</section>
+
+
+
+
     <!-- Javascript -->
     <script src="js/script.js"></script>
   </body>
