Comienzo Services section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
           </div>
 </section>
 
+<!-- Services section design  -->
+<section class="services" id="services">
+  <h2 class="heading">Our <span>Services</span></h2>
+  <div class="services-container">
+    <div class="services-box">
+      <i class='bx bx-code-alt'></i>
+      <h3>Web Development</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi debitis commodi cupiditate enim quae deserunt nulla eveniet, quidem eos ab voluptate blanditiis officia, quibusdam reprehenderit. Possimus, asperiores velit! Odio, ea!</p>
+      <a href="#" class="btn">Read More</a>
+
+    </div>
+  </div>
+</section>
 
 
 
