Termino esqueleto de services

--- a/index.html
+++ b/index.html
@@ -68,17 +68,36 @@
 <section class="services" id="services">
   <h2 class="heading">Our <span>Services</span></h2>
   <div class="services-container">
+
     <div class="services-box">
       <i class='bx bx-code-alt'></i>
       <h3>Web Development</h3>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi debitis commodi cupiditate enim quae deserunt nulla eveniet, quidem eos ab voluptate blanditiis officia, quibusdam reprehenderit. Possimus, asperiores velit! Odio, ea!</p>
       <a href="#" class="btn">Read More</a>
-
     </div>
+
+    <div class="services-box">
+      <i class='bx bxs-data'></i>
+      <h3>Backend Development</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi debitis commodi cupiditate enim quae deserunt nulla eveniet, quidem eos ab voluptate blanditiis officia, quibusdam reprehenderit. Possimus, asperiores velit! Odio, ea!</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+
+    <div class="services-box">
+      <i class='bx bx-bar-chart-alt'></i>
+      <h3>Digital Marketing</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi debitis commodi cupiditate enim quae deserunt nulla eveniet, quidem eos ab voluptate blanditiis officia, quibusdam reprehenderit. Possimus, asperiores velit! Odio, ea!</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+
   </div>
 </section>
 
+<!-- Portfolio section design  -->
 
+<section class="portfolio" id="portfolio">
+  <h2 class="heading">Latest <span>Proyect</span></h2>
+</section>
 
     <!-- Javascript -->
     <script src="js/script.js"></script>
